# non-guillotine-cutting

./: CMakeLists.txt  config.c  config.h  main.c
.kdev4/: non-guillotine-cutting.kdev4
amaral/: NGC_a1.TXT  NGC_a2.TXT  NGC_a3.TXT  NGC_a4.TXT  NGC_a5.TXT  NGC_b1.TXT  NGC_b2.TXT  NGC_b3.TXT  NGC_b4.TXT  NGC_b5.TXT  NGC_c1.TXT  NGC_c2.TXT  NGC_c3.TXT  NGC_c4.TXT  NGC_c5.TXT  NGC_d1.TXT  NGC_d2.TXT  NGC_d3.TXT  NGC_d4.TXT  NGC_d5.TXT  NGC_e1.TXT  NGC_e2.TXT  NGC_e3.TXT  NGC_e4.TXT  NGC_e5.TXT  NGC_f1.TXT  NGC_f2.TXT  NGC_f3.TXT  NGC_f4.TXT  NGC_f5.TXT
heuristics/: heuristic.c  heuristic.h  rec.c  rec.h
in/: beasley_10.txt  beasley_12.txt  beasley_2.txt  beasley_3.txt  beasley_5.txt  beasley_7.txt  fekete_4.txt  test_1.txt
trunk/: CMakeLists.txt  config.c  config.h  main.c  non-guillotine-cutting.kdev4
trunk/.kdev4/: non-guillotine-cutting.kdev4
trunk/heuristics/: heuristic.c  heuristic.h  rec.c  rec.h
trunk/in/: beasley_1.txt  beasley_11.txt  beasley_4.txt  beasley_6.txt  beasley_8.txt  beasley_9.txt  christofides.txt  fekete_1.txt  fekete_2.txt  fekete_3.txt  fekete_5.txt  hadjiconstantinou_1.txt  hadjiconstantinou_2.txt  wang.txt
